--- a/latex_thesis/parts/chapter3.tex
+++ b/latex_thesis/parts/chapter3.tex
@@ -119,12 +119,12 @@ Another crucial aspect of the fuzzing process involves the corpus and the mutato
     \centering
     \begin{adjustbox}{valign=t}
     \begin{lstlisting}
-        PUT /hello.txt HTTP/1.1
-        Host: 127.0.0.1:8080
-        Content-type: text/plain
-        Content-length: 13
-    
-        Hello, World!
+    PUT /hello.txt HTTP/1.1
+    Host: 127.0.0.1:8080
+    Content-type: text/plain
+    Content-length: 13
+
+    Hello, World!
 
     
     \end{lstlisting}
@@ -137,11 +137,11 @@ Another crucial aspect of the fuzzing process involves the corpus and the mutato
     \centering
     \begin{adjustbox}{valign=t}
     \begin{lstlisting}
-        DELETE /hello.txt HTTP/1.1
-        Host: 127.0.0.1:8080
-        User-Agent: curl/8.0.1
-        Accept: */*
-    
+    DELETE /hello.txt HTTP/1.1
+    Host: 127.0.0.1:8080
+    User-Agent: curl/8.0.1
+    Accept: */*
+
     
     \end{lstlisting}
     \end{adjustbox}
@@ -211,8 +211,9 @@ RUN chmod +x /LibAFLstar/run.sh
 
 WORKDIR /LibAFLstar
 \end{lstlisting}
+\phantom{}\\
 The Docker container is configured with all the dependencies to run the fuzzer and build the modified Lighttpd server, providing a controlled environment to conduct the fuzzing experiment.
-Another important file to consider is the configuration file of the Lighttpd server, which is shown below.
+Another important file to consider is the configuration file of the Lighttpd server, which is shown below.\\
 \begin{lstlisting}
     server.document-root = "/tmp"
     server.bind = "0.0.0.0"
@@ -222,8 +223,9 @@ Another important file to consider is the configuration file of the Lighttpd ser
     server.max-worker = 1 
     server.max-connections = 1000
 \end{lstlisting}
+\phantom{}\\
 This configuration file specifies the server's document root, bind address, port, and maximum number of workers and connections. By defining these parameters, we ensure that the server operates correctly and can handle the incoming requests from the fuzzer.
-\\\\In particular, we force to have just one worker to avoid problems with fuzzing, because Fallaway is not yet ready to work with multi-process SUT.
+\\In particular, we force to have just one worker to avoid problems with fuzzing, because Fallaway is not yet ready to work with multi-process SUT.
 \subsection{Fuzzing Execution and Results}
 
 We ran the fuzzer for 24 hours, using the following script to execute it:
@@ -252,131 +254,14 @@ AFLNet and ChatAFL provide alternative approaches to fuzzing that share certain 
 The setup process for AFLNet and ChatAFL is quite similar to that of Fallaway, given that all three fuzzers share a common Docker-based environment with the necessary dependencies. Both AFLNet and ChatAFL are built and configured using \textbf{ProFuzzBench} \cite{profuzzbench}, a benchmark suite specifically designed for evaluating network protocol fuzzers. ProFuzzBench provides a standardized environment and set of targets to ensure a fair comparison among different fuzzers.
 \\By using ProFuzzBench, AFLNet and ChatAFL benefit from a streamlined setup process that automates the installation of dependencies and configuration of the environment, thus reducing setup overhead. This setup also involves additional dependencies, such as specific Python packages, which are necessary for supporting ChatAFL's unique capabilities like leveraging language models internally.
 \\The Docker setup derived from ProFuzzBench provides the same base environment for both AFLNet and ChatAFL, ensuring compatibility and consistency across experiments. By using this common benchmark suite, researchers can directly compare results, further validating the effectiveness and performance differences between the fuzzers.
-The Dockerfile for AFLNet and ChatAFL is shown from the next page.
-\\\\
-\begin{lstlisting}
-FROM ubuntu:20.04
-
-# Install common dependencies
-ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get -y update && \
-    apt-get -y install sudo \ 
-    apt-utils \
-    build-essential \
-    openssl \
-    clang \
-    graphviz-dev \
-    git \
-    autoconf \
-    libgnutls28-dev \
-    libssl-dev \
-    llvm \
-    python3-pip \
-    nano \
-    net-tools \
-    vim \
-    gdb \
-    netcat \
-    strace \
-    libcap-dev \
-    libpcre2-dev \
-    libpcre2-8-0 \
-    libcurl4-openssl-dev \
-    libjson-c-dev \
-    pkg-config \
-    zlib1g-dev \
-    automake libtool m4 \
-    wget
-
-# Add a new user ubuntu, pass: ubuntu
-RUN groupadd ubuntu && \
-    useradd -rm -d /home/ubuntu -s /bin/bash -g ubuntu -G sudo -u 1000 ubuntu -p "$(openssl passwd -1 ubuntu)"
-
-RUN chmod 777 /tmp
-
-RUN pip3 install gcovr==4.2
-
-# Use ubuntu as default username
-USER ubuntu
-WORKDIR /home/ubuntu
-
-# Import environment variable to pass as parameter to make (e.g., to make parallel builds with -j)
-ARG MAKE_OPT
-
-# Set up fuzzers
-COPY --chown=ubuntu:ubuntu aflnet aflnet
-RUN cd aflnet && \
-    make clean all $MAKE_OPT && \
-    cd llvm_mode && make $MAKE_OPT
-
-COPY --chown=ubuntu:ubuntu chatafl chatafl
-RUN cd chatafl && \
-    make clean all $MAKE_OPT && \
-    cd llvm_mode && make $MAKE_OPT
-
-COPY --chown=ubuntu:ubuntu chatafl-cl1 chatafl-cl1
-RUN cd chatafl-cl1 && \
-    make clean all $MAKE_OPT && \
-    cd llvm_mode && make $MAKE_OPT
-
-COPY --chown=ubuntu:ubuntu chatafl-cl2 chatafl-cl2
-RUN cd chatafl-cl2 && \
-    make clean all $MAKE_OPT && \
-    cd llvm_mode && make $MAKE_OPT
-
-# Set up environment variables for AFLNet
-ENV WORKDIR="/home/ubuntu/experiments"
-ENV AFLNET="/home/ubuntu/aflnet"
-ENV PATH="${PATH}:${AFLNET}:/home/ubuntu/.local/bin:${WORKDIR}"
-ENV AFL_PATH="${AFLNET}"
-ENV AFL_I_DONT_CARE_ABOUT_MISSING_CRASHES=1 \
-    AFL_SKIP_CPUFREQ=1 \
-    AFL_NO_AFFINITY=1
-
-
-RUN mkdir $WORKDIR
-
-COPY --chown=ubuntu:ubuntu gcov.patch ${WORKDIR}/gcov.patch
-
-# Set up environment variables for ASAN
-env ASAN_OPTIONS='abort_on_error=1:symbolize=0:detect_leaks=0:detect_stack_use_after_return=1:detect_container_overflow=0:poison_array_cookie=0:malloc_fill_byte=0:max_malloc_fill_size=16777216'
-
-# Download and compile Lighttpd1.4 for fuzzing
-RUN cd $WORKDIR && \
-    git clone https://git.lighttpd.net/lighttpd/lighttpd1.4.git lighttpd1 && \
-    cd lighttpd1 && \
-    git checkout 9f38b63cae3e2 && \
-    ./autogen.sh && \ 
-    CC=afl-clang-fast CXX=afl-clang-fast++ ./configure --enable-static --disable-shared && \
-    AFL_USE_ASAN=1 make clean all $MAKE_OPT || make all
-
-
-# Download and compile Lighttpd1.4 for coverage analysis
-RUN cd $WORKDIR && \
-    git clone https://git.lighttpd.net/lighttpd/lighttpd1.4.git lighttpd1-gcov && \
-    cd lighttpd1-gcov && \
-    git checkout 9f38b63cae3e2 && \
-    patch -p1 < ${WORKDIR}/gcov.patch && \
-    ./autogen.sh && \ 
-    CFLAGS="-fprofile-arcs -ftest-coverage" CPPFLAGS="-fprofile-arcs -ftest-coverage" CXXFLAGS="-fprofile-arcs -ftest-coverage" LDFLAGS="-fprofile-arcs -ftest-coverage" ./configure --enable-static --disable-shared && \
-    make clean all
-
-COPY --chown=ubuntu:ubuntu in-http ${WORKDIR}/in-http
-COPY --chown=ubuntu:ubuntu http.dict ${WORKDIR}/http.dict
-COPY --chown=ubuntu:ubuntu cov_script.sh ${WORKDIR}/cov_script
-COPY --chown=ubuntu:ubuntu run.sh ${WORKDIR}/run
-COPY --chown=ubuntu:ubuntu inputs ${WORKDIR}/inputs
-COPY --chown=ubuntu:ubuntu lighttpd.conf ${WORKDIR}/lighttpd.conf
-
-RUN cp -rf ${WORKDIR}/inputs/* /tmp/
-\end{lstlisting}
-Another important file to consider is the configuration file of the Lighttpd server, which is shown below.
+Another important thing to consider is the configuration file of the Lighttpd server, which is shown below.\\
 \begin{lstlisting}
     server.document-root = "/tmp"
     server.bind = "127.0.0.1"
     server.port = 8080
     mimetype.assign = (".txt" => "text/plain", ".html" => "text/html" )
 \end{lstlisting}
+\phantom{}\\
 As we can see, in this case we don't have to force the number of workers to 1, because they don't have the same problem as Fallaway, due to their managment of the SUT, explained in the next section.
 
 \subsection{Mutator and Corpus Management}
@@ -394,10 +279,10 @@ Here are some examples of the corpus used by AFLNet and ChatAFL:
     \centering
     \begin{adjustbox}{valign=t}
     \begin{lstlisting}
-        GET /hello.txt HTTP/1.1
-        Host: 127.0.0.1:8080
-        User-Agent: curl/8.0.1
-        Accept: */*
+    GET /hello.txt HTTP/1.1
+    Host: 127.0.0.1:8080
+    User-Agent: curl/8.0.1
+    Accept: */*
         
             
     \end{lstlisting}
@@ -409,10 +294,10 @@ Here are some examples of the corpus used by AFLNet and ChatAFL:
     \centering
     \begin{adjustbox}{valign=t}
     \begin{lstlisting}
-        OPTIONS /hello.txt HTTP/1.1
-        Host: 127.0.0.1:8080
-        User-Agent: curl/8.0.1
-        Accept: */*
+    OPTIONS /hello.txt HTTP/1.1
+    Host: 127.0.0.1:8080
+    User-Agent: curl/8.0.1
+    Accept: */*
 
     
     \end{lstlisting}
@@ -424,11 +309,11 @@ Here are some examples of the corpus used by AFLNet and ChatAFL:
     \centering
     \begin{adjustbox}{valign=t}
     \begin{lstlisting}
-        DELETE /hello.txt HTTP/1.1
-        Host: 127.0.0.1:8080
-        User-Agent: curl/8.0.1
-        Accept: */*
-    
+    DELETE /hello.txt HTTP/1.1
+    Host: 127.0.0.1:8080
+    User-Agent: curl/8.0.1
+    Accept: */*
+
     
     \end{lstlisting}
     \end{adjustbox}
@@ -469,7 +354,7 @@ One of the main distinctions between Fallaway, AFLNet, and ChatAFL is their stra
 
 \subsection{Fuzzing Execution and Results}
 
-The real difference from Fallaway is in the execution script that we can see here:
+The real difference from Fallaway is in the execution script that we can see here:\\
 \begin{lstlisting}
     #!/bin/bash
 
@@ -493,18 +378,20 @@ The real difference from Fallaway is in the execution script that we can see her
 
     PFBENCH=$PFBENCH PATH=$PATH NUM_CONTAINERS=$NUM_CONTAINERS TIMEOUT=$TIMEOUT SKIPCOUNT=$SKIPCOUNT TEST_TIMEOUT=$TEST_TIMEOUT scripts/execution/profuzzbench_exec_all.sh ${TARGET_LIST} ${FUZZER_LIST}
 \end{lstlisting}
-An example of execution line is like this:
+\phantom{}\\
+An example of execution line is like this:\\
 \begin{lstlisting}
 ./run.sh  <container_number> <fuzzed_time> <subjects> <fuzzers>
 \end{lstlisting}
-We can see that the script takes four arguments:
+\phantom{}\\
+We can see that the script takes four arguments:\\
 \begin{itemize}
     \item \textit{CONTAINER\_NUMBER}: the number of containers to use for the execution of the fuzzer.
     \item \textit{FUZZED\_TIME}: the time in minutes after which the execution of the fuzzer will be stopped.
     \item \textit{SUBJECTS}: a list of targets to fuzz.
     \item \textit{FUZZERS}: a list of fuzzers to use.
 \end{itemize}
-\phantom{}\\\\
+\phantom{}\\
 We ran the script with the following command (1440 is 24h in minutes):
 \begin{lstlisting}
 ./run.sh 1 1440 lighttpd aflnet,chatafl
