added greetings, may be final

--- a/latex_thesis/bibliography.bib
+++ b/latex_thesis/bibliography.bib
@@ -21,14 +21,14 @@ author={Roberto Natella and Van-Thuan Pham},
 booktitle={Proceedings of the 30th ACM SIGSOFT International Symposium on Software Testing and Analysis},
 year={2021},}
 
-@conference{icissp23,
+@inproceedings{icissp23,
 title={Evaluating the Fork-Awareness of Coverage-Guided Fuzzers},
 author={Marcello Maugeri and Cristian Daniele and Giampaolo Bella and Erik Poll},
 booktitle={Proceedings of the 9th International Conference on Information Systems Security and Privacy - ICISSP},
 year={2023},}
 
 @inproceedings{forkfuzz,
-  title={Forkfuzz: Leveraging the Fork-Awareness in Coverage-Guided Fuzzing},
-  author={Marcello Maugeri and Cristian Daniele and Giampaolo Bella},
-  booktitle={Computer Security. ESORICS 2023 International Workshops: CPS4CIP, ADIoT, SecAssure, WASP, TAURIN, PriST-AI, and SECAI, The Hague, The Netherlands, September 25--29, 2023, Revised Selected Papers, Part II},
-  year={2023},}
+title={Forkfuzz: Leveraging the Fork-Awareness in Coverage-Guided Fuzzing},
+author={Marcello Maugeri and Cristian Daniele and Giampaolo Bella},
+booktitle={Computer Security. ESORICS 2023 International Workshops: CPS4CIP, ADIoT, SecAssure, WASP, TAURIN, PriST-AI, and SECAI, The Hague, The Netherlands, September 25--29, 2023, Revised Selected Papers, Part II},
+year={2023},}
