--- a/latex_thesis/document.tex
+++ b/latex_thesis/document.tex
@@ -73,5 +73,8 @@
 \newpage
 \bibliographystyle{unsrt}
 \renewcommand{\bibname}{References}
+\addcontentsline{toc}{chapter}{References}
 \bibliography{bibliography}
+
+\input{parts/greetings}
 \end{document}
