--- a/latex_thesis/parts/greetings.tex
+++ b/latex_thesis/parts/greetings.tex
@@ -9,11 +9,13 @@ Vorrei ringraziare prima di tutto me stesso, per la dedizione e la costanza che 
 \\Ringrazio mia sorella per avermi sempre ascoltato, per essere sempre al mio fianco, per il sostegno che mi ha sempre dato e per la gioia che ha trasmesso nel vedere i miei successi, per l'orgoglio che ha nei mie confronti, per la stima, l'affetto (non dimostrato a volte per la sua afefobia), la comprensione, i litigi.
 Complici e complicati, ma sempre uniti. Ti voglio un mondo di bene.
 \\Ringrazio la mia ragazza, per tutto l'amore che mi ha dato, per la pazieza che ha avuto nei momenti di stress, per i pianti fatti insieme e per tutti i nostri momenti felici. Sei unica e speciale, ti amo.
-\\Ringrazio i miei animali, Miele, Nica, Tigro e Coco, per avermi sempre fatto compagnia, per avermi sempre fatto sentire amato e per avermi sempre fatto sorridere. Sono parte di me.
+\\Ringrazio mio cognato, nonché amico e fratello, per ogni avventura fatta insieme, ogni tuo consiglio, ogni tuo discorso e per tutti i video di youtube che ci mandiamo (Latman sempre con noi). Ti voglio bene, sei davvero importante.
+\\Ringrazio i miei animali, Miele, Nica, Tigro e Cocò, per avermi sempre fatto compagnia, per avermi sempre fatto sentire amato e per avermi sempre fatto sorridere. Sono parte di me.
 \\Ringrazio i miei amici, per essermi stati vicini e per aver creduto in me.
 \\In particolare ringrazio Emanuele Catania, per la fratellanza che ci lega, per il supporto che ci siamo sempre dati nonostante la distanza. Sei e sarai sempre mio fratello, ti voglio bene e ricordati che "il tiro di Nino Bixio, secondo me", lo posso fare solo io.
 \\Ringrazio Beatrice Boninelli, che nonostante la distanza, nonostante il sentirci poco e nonostante le nostre vite separate, mi ha sempre dimostrato affetto e stima. Sin dal primo superiore abbiamo creato un legame che non si è mai spezzato, ti voglio bene, conta sempre su di me.
 \\Ringrazio Marcello Maugeri, il mio "advisor", per essere stato sempre un punto di riferimento in questi anni in università e non solo. Grazie per avermi sempre dato consigli ottimi per tutto quello che riguarda la mia carriera universitaria e lavorativa, grazie per il supporto durante la stesura della tesi, grazie per avermi motivato e farmi credere in me stesso. Sei e continuerai ad essere un esempio per me.
 \\Ringrazio il mio relatore, il Prof. Giampaolo Bella, per avermi insegnato che bisogna combattere per ciò in cui si crede e che per fare questo lavoro, bisogna crederci e metterci tutto.
-\\Infine, come non ringraziare il mio compagno di corso, di esami, di risate, di soddisfazioni e di sconfitte. Grazie a te Simone Furneri, per tutti questi anni di studio insieme, per ogni materia fatta insieme, per ogni presa in giro e per ogni momento passato insieme. Abbiamo dato sempre il massimo e siamo arrivati fin qui, insieme. Spero che tutto questo possa continuare anche in futuro, ti voglio bene, sei speciale.
+\\Ringrazio il mio gruppo di colleghi, RealUnictInfoNelChill, per aver condiviso le migliori uscite e lo studio insieme e le risate durante le lezioni. So che le nostre strade si separeranno, ma spero che questo gruppo resti sempre unito.
+\\Infine, come non ringraziare il mio compagno di corso, di esami, di risate, di soddisfazioni e di sconfitte. Grazie a te Simone Furneri, per tutti questi anni di studio insieme, per ogni materia fatta insieme, per ogni presa in giro e per ogni momento passato insieme. Abbiamo dato sempre il massimo e siamo arrivati fin qui, insieme (anche grazie all'aiuto di Alfio Sgroi 'BatutiniODiplomA'). Spero che tutto questo possa continuare anche in futuro, ti voglio bene, sei speciale.
 \\Grazie a tutti, per avermi reso la persona che sono oggi.
